# nucleus

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  ports.promptinclude.md
.github/workflows/: advance-promotion-cursor.yml  ci.yml  nightly-promote.yml  publish-managed-release.yml
apps/web/: components.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.css
apps/web/src/lib/components/app/session/: friendly-error-notice.svelte  session-composer-input.svelte  session-job-detail-summary.svelte  session-job-history.svelte  session-job-list.svelte  session-sidebar-actions-audit.svelte  session-workspace.svelte
apps/web/src/lib/components/app/sidebar/: app-sidebar.svelte  sidebar-footer.svelte  sidebar-item.svelte  sidebar-project-item.svelte  sidebar-project-list.svelte  sidebar-session-item.svelte  sidebar-session-list.svelte
apps/web/src/lib/components/app/workspace/: index.ts  workspace-access-card.svelte  workspace-compatibility-card.svelte  workspace-connection-card.svelte  workspace-core-grid.svelte  workspace-empty-state.svelte  workspace-info-tile.svelte  workspace-meter-panel.svelte  workspace-note-grid.svelte  workspace-page-header.svelte  workspace-section-nav.svelte  workspace-segmented-control.svelte  workspace-stat-card.svelte  workspace-storage-path-card.svelte  workspace-update-behavior-card.svelte  workspace-update-controls-card.svelte  workspace-update-status-grid.svelte  workspace-update-target-card.svelte
apps/web/src/lib/components/dashboard/: disk-table.svelte  process-table.svelte
apps/web/src/lib/components/session/: markdown-content.svelte
apps/web/src/lib/components/ui/badge/: badge.svelte
apps/web/src/lib/components/ui/button/: button.svelte
apps/web/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte
apps/web/src/lib/components/ui/checkbox/: checkbox.svelte
apps/web/src/lib/components/ui/dialog/: dialog-close.svelte  dialog-content.svelte  dialog-description.svelte  dialog-overlay.svelte  dialog-title.svelte  index.ts
apps/web/src/lib/components/ui/input/: input.svelte
apps/web/src/lib/components/ui/label/: label.svelte
apps/web/src/lib/components/ui/scroll-area/: index.ts  scroll-area-corner.svelte  scroll-area-scrollbar.svelte  scroll-area-thumb.svelte  scroll-area-viewport.svelte  scroll-area.svelte
apps/web/src/lib/components/ui/select/: select.svelte
apps/web/src/lib/components/ui/separator/: separator.svelte
apps/web/src/lib/components/ui/sheet/: index.ts  sheet-close.svelte  sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-title.svelte  sheet.svelte
apps/web/src/lib/components/ui/textarea/: textarea.svelte
apps/web/src/lib/nucleus/: auth.ts  client.ts  compatibility.ts  format.ts  markdown.ts  realtime.ts  schemas.ts  targets.ts
apps/web/src/lib/utils/: index.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/automations/: +page.svelte
apps/web/src/routes/cpu/: +page.svelte  +page.ts
apps/web/src/routes/dashboard/: +page.svelte
apps/web/src/routes/diagnostics/: +page.svelte
apps/web/src/routes/memory/: +page.svelte
apps/web/src/routes/sessions/: +page.svelte
apps/web/src/routes/settings/: +page.svelte
apps/web/src/routes/workspace/: +layout.svelte  +page.svelte
apps/web/src/routes/workspace/diagnostics/: +page.svelte
apps/web/src/routes/workspace/logs/: +page.svelte
apps/web/src/routes/workspace/mcps/: +page.svelte
apps/web/src/routes/workspace/memory/: +page.svelte
apps/web/src/routes/workspace/settings/: +page.svelte
apps/web/src/routes/workspace/skills/: +page.svelte
apps/web/src/routes/workspace/vault/: +page.svelte
clients/: README.md
crates/adapters-claude/: Cargo.toml
crates/adapters-claude/src/: lib.rs
crates/adapters-codex/: Cargo.toml
crates/adapters-codex/src/: lib.rs
crates/adapters-system/: Cargo.toml
crates/adapters-system/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: agent.rs  browser.rs  error_display.rs  host.rs  main.rs  runtime.rs  security.rs  updates.rs  vault.rs  worker_action.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: architecture.md  auth-token-security-plan.md  context-security-boundaries.md  local-instances.md  managed-release.md  memory-implementation-plan.md  memory-vault-security-execution-plan.md  repo-workflow.md  roadmap.md  skills-mcp-plan.md  skills.md  vault-security-implementation-plan.md  web-ui-system-plan.md  workspace-model.md
docs/backlog/: 2026-05-07-model-agnostic-runtime-handoff.md  2026-05-07-model-agnostic-runtime-session-prompt.md  managed-release-follow-on-work.md  phase-0.md  promotion-pipeline-follow-up.md  update-system-follow-up.md
docs/decisions/: 0001-product-foundations.md  0002-managed-release-update-model.md  0003-session-browser-runtime.md  0003-session-workspace-isolation.md
docs/mcp/: native-mcp.md
docs/rfc/: 0001-local-ai-control-plane.md  0002-model-agnostic-prompt-runtime.md
include/: 00-product.md  10-architecture.md  20-workspace-model.md  30-roadmap.md
migrations/: README.md
scripts/: README.md  browser-sidecar.mjs  convert-mcp-bridges.py  test-promotion-bootstrap-validation.sh  validate-promotion-bootstrap.sh
