[workspace]
resolver = "2"
members = [
  "crates/adapters-claude",
  "crates/adapters-codex",
  "crates/adapters-system",
  "crates/cli",
  "crates/core",
  "crates/daemon",
  "crates/protocol",
  "crates/release",
  "crates/storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["WebLime"]
homepage = "https://nucleus.weblime.com"
repository = "https://github.com/WebLime-agency/nucleus"
description = "Nucleus is a local AI control plane with a Rust daemon, web UI, and operator tooling."

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
flate2 = "1"
futures-util = "0.3"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.37"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }

nucleus-adapters-claude = { path = "crates/adapters-claude" }
nucleus-adapters-codex = { path = "crates/adapters-codex" }
nucleus-adapters-system = { path = "crates/adapters-system" }
nucleus-core = { path = "crates/core" }
nucleus-protocol = { path = "crates/protocol" }
nucleus-release = { path = "crates/release" }
nucleus-storage = { path = "crates/storage" }
