[package]
name = "nucleus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
nucleus-core.workspace = true
nucleus-protocol.workspace = true
reqwest.workspace = true
tokio.workspace = true

