[package]
name = "nucleus-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
dirs.workspace = true
futures-util.workspace = true
nucleus-core.workspace = true
nucleus-protocol.workspace = true
nucleus-release.workspace = true
nucleus-storage.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
