[package]
name = "nucleus-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
dirs.workspace = true
flate2.workspace = true
futures-util.workspace = true
libc.workspace = true
nucleus-core.workspace = true
nucleus-protocol.workspace = true
nucleus-release.workspace = true
nucleus-storage.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tar.workspace = true
tokio.workspace = true
tower-http.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
