[package]
name = "nucleus-release"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
flate2.workspace = true
nucleus-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
