[package]
name = "nucleus-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
nucleus-protocol.workspace = true
nucleus-core.workspace = true
anyhow.workspace = true
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
